# agent-system

./: .gitignore  README.md  pyproject.toml
aiagent/: __init__.py  agent.py  main.py  runtime.py  send_mailbox.py  ui.py
aiagent/tools/: background_tools.py  buffer_tools.py  common.py  file_tools.py  registry.py  shell_tools.py  skill_tools.py  task_tools.py  todo_tools.py
